objects/kugo2p__TaxRate__c.object
<CustomObject>
    <description>Kugamon - Related object to Tax Location to store rate information. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Rate__c</fullName>
        <label>Rate (%)</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipLabel>Tax Rates</relationshipLabel>
        <relationshipName>Tax_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Tax Rate Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__RateCannotBeZero</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__Rate__c =0</errorConditionFormula>
        <errorDisplayField>kugo2p__Rate__c</errorDisplayField>
        <errorMessage>Tax Rate Cannot Equal Zero</errorMessage>
    </validationRules>
</CustomObject>